@@ -50,6 +50,7 @@ Container/Image/SCM/Signature
 - SCM_ADAPTER_V1
 - SCM_REF_UNRESOLVED
 - SCM_TREE_CAPTURED
+- SCM_WORKTREE_DIRTY
 - SIGNATURE_EVIDENCE_V1
 - SIGNER_PRESENT
 - CHAIN_PRESENT
